Update RemoveBookServlet.java