@@ -35,8 +35,8 @@ public class RemoveBookServlet extends HttpServlet {
             rd.include(req, res);
             StoreUtil.setActiveTab(pw, "removebook");
             pw.println("<div class='container'>");
-            if (bookId == null || bookId.isBlank()) {
-                // render the remove book form;
+            if (bookId == null || bookId.trim().isEmpty()) {
+               // render the remove book form;
                 showRemoveBookForm(pw);
                 return;
             } // else continue
